# astro-transit

./: .gitignore  README.md  render.yaml
.github/workflows/: keepalive.yml
app/: .gitignore  README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/test/: geo_test.dart  overlay_geometry_test.dart  widget_test.dart
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py  schemas.py
backend/app/api/v1/: aircraft.py  astronomy.py  router.py  satellites.py  transits.py
backend/app/astronomy/: __init__.py  ephemeris.py  satellites.py
backend/app/confidence/: __init__.py  scoring.py
backend/app/core/: __init__.py  config.py
backend/app/domain/: __init__.py  models.py
backend/app/geometry/: __init__.py  angles.py  coordinates.py  corridor.py  satellite_ground.py
backend/app/prediction/: __init__.py  projection.py  satellite_transit.py  transit.py
backend/app/providers/: __init__.py  adsbfi.py  adsblol.py  airplaneslive.py  base.py  fake.py  opensky.py  readsb.py  registry.py  units.py
backend/app/services/: __init__.py  passes_service.py  prediction_service.py  visible_passes_service.py
backend/tests/: test_angles.py  test_confidence.py  test_coordinates.py  test_corridor.py  test_ephemeris.py  test_passes_service.py  test_prediction_service.py  test_projection.py  test_readsb_providers.py  test_registry.py  test_satellite_transit.py  test_temporal_coherence.py  test_transit.py  test_visible_passes_service.py
docs/: SPEC.md
(+43 files in other folders)
