[project]
name = "astrotransit-backend"
version = "0.1.0"
description = "AstroTransit backend — aircraft/Sun/Moon transit prediction"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "httpx>=0.27",
    "numpy>=1.26",
    "skyfield>=1.49",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["app*"]
